--- a/cliff.toml
+++ b/cliff.toml
@@ -1,24 +1,24 @@
-# git-cliff ~ default configuration file
-# https://git-cliff.org/docs/configuration
-#
-# Lines starting with "#" are comments.
-# Configuration options are organized into tables and keys.
-# See documentation for more information on available options.
-
 [changelog]
-# changelog header
 header = """
-# Changelog\n
+# 🌺 Changelog 🌺 \n
 All notable changes to this project will be documented in this file.\n
 """
 # template for the changelog body
 # https://tera.netlify.app/docs/#introduction
 body = """
 {% if version %}\
-    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
+    ## [{{ version | trim_start_matches(pat="v") }}]\
+    {% if previous %}\
+      {% if previous.version -%}
+        (https://github.com/NetsuNetwork/lilith/compare/{{ previous.version }}...{{ version }})\
+      {% else -%}\
+        (https://github.com/NetsuNetwork/lilith/version/{{ version }})\
+      {% endif %}\
+    {% endif%} \
+    - {{ timestamp | date(format="%Y-%m-%d") }}\
 {% else %}\
     ## [unreleased]
-{% endif %}\
+{% endif %}
 {% if previous %}\
     {% if previous.commit_id %}
         [{{ previous.commit_id | truncate(length=7, end="") }}]({{ previous.commit_id }})...\
@@ -26,58 +26,52 @@ body = """
     {% endif %}\
 {% endif %}\
 {% for group, commits in commits | group_by(attribute="group") %}
-    ### {{ group | upper_first }}
+    ### {{ group | trim | upper_first }}
     {% for commit in commits %}
-        - {{ commit.message | upper_first }} ([{{ commit.id | truncate(length=7, end="") }}]({{ commit.id }}))\
+        {%- if commit.scope -%}
+        - *({{ commit.scope }})* {{ commit.message | upper_first }} \
+        {% else -%}
+        - {{ commit.message | upper_first }} \
+        {% endif -%}\
+        {% if commit.breaking -%}
+          **BREAKING** \
+        {% endif -%}
+        ([{{ commit.id | truncate(length=7, end="") }}]({{ commit.id }})) \
+        {{ commit.author.name }}
           {% for footer in commit.footers -%}
             , {{ footer.token }}{{ footer.separator }}{{ footer.value }}\
           {% endfor %}\
-    {% endfor %}
-{% endfor %}\n
+    {% endfor -%}
+{%- endfor -%}\n
 """
-# remove the leading and trailing whitespace from the template
 trim = true
-# changelog footer
 footer = ""
 
 [git]
-# parse the commits based on https://www.conventionalcommits.org
 conventional_commits = true
-# filter out the commits that are not conventional
 filter_unconventional = true
-# process each line of a commit as an individual commit
 split_commits = false
-# regex for preprocessing the commit messages
 commit_preprocessors = [
   # { pattern = '\((\w+\s)?#([0-9]+)\)', replace = "([#${2}](https://github.com/orhun/git-cliff/issues/${2}))"}, # replace issue numbers
 ]
 # regex for parsing and grouping commits
 commit_parsers = [
-  { message = "^feat", group = "New Features" },
-  { message = "^fix", group = "Bug Fixes" },
-  { message = "^doc", group = "Documentation Changes" },
-  { message = "^perf", group = "Performance" },
+  { message = "^feat", group = "*OwO* New Features" },
+  { message = "^fix", group = "🐞 Bug Fixes" },
+  { message = "^doc", group = "📓 Documentation Changes" },
+  { message = "^perf", group = "⏱️ Performance" },
   { message = "^refactor", group = "Refactor" },
   { message = "^revert", skip = true },
-  { message = "^style", group = "Styling" },
-  { message = "^test", group = "Testing" },
+  { message = "^style", group = "💄 Styling" },
+  { message = "^test", group = "🧪 Testing" },
   { message = "^release", skip = true },
-  { message = "^chore", group = "Miscellaneous Tasks" },
-  { body = ".*security", group = "Security" },
+  { message = "^chore", group = "💤 Miscellaneous Tasks" },
+  { body = ".*security", group = "🛡️ Security" },
 ]
-# protect breaking changes from being skipped due to matching a skipping commit_parser
+
 protect_breaking_commits = false
-# filter out the commits that are not matched by commit parsers
 filter_commits = false
-# glob pattern for matching git tags
 tag_pattern = "v[0-9]*"
-# regex for skipping tags
-skip_tags = "v0.1.0-beta.1"
-# regex for ignoring tags
 ignore_tags = ""
-# sort the tags topologically
 topo_order = false
-# sort the commits inside sections by oldest/newest order
 sort_commits = "oldest"
-# limit the number of commits included in the changelog.
-# limit_commits = 42
